--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("user_R68NcwoJDXvDMLz7nD4W9");
+      })();
+    </script>
+
     <title>Sebastian UX</title>
   </head>
   <body>
